# Copyright 2021 The Chromium Authors. All rights reserved.
# Use of this source code is governed by a BSD-style license that can be
# found in the LICENSE file.
import("../../../scripts/build/ninja/devtools_entrypoint.gni")
import("../../../third_party/typescript/typescript.gni")
import("../visibility.gni")

ts_library("nevermore_app") {
  no_emit = true
  sources = [ "nevermore_app.js" ]

  deps = [
    ":nevermore_main",
    "../../entrypoints/startup:bundle",
    "../../panels/js_profiler:meta",
    "../shell",
  ]
}

devtools_entrypoint("nevermore_main") {
  entrypoint = "NevermoreMain.ts"

  deps = [
    "../../core/common:bundle",
    "../../core/host:bundle",
    "../../core/i18n:bundle",
    "../../core/sdk:bundle",
    "../../ui/legacy/components/utils:bundle",
    "../../core/root:bundle",
    "../../panels/sources:bundle",
    "../../ui/legacy:bundle",
  ]

  visibility = [ ":*" ]
}
